--- a/3_Vanilla_JS/02_Fundamentals/001 MD files/VUE3 md/3.setup_ersatt_data-objekt.md
+++ b/3_Vanilla_JS/02_Fundamentals/001 MD files/VUE3 md/3.setup_ersatt_data-objekt.md
@@ -32,3 +32,32 @@ I det här exemplet skapar vi en variabel som heter 'message' och sätter den ti
 ```
 
 Så när komponenten renderas skulle det visa "Hello World"
+
+## data-objektet
+
+data-objekt låter oss skapa speciella Vue.js-“variabler”
+JavaScript-variabler kan skapas med let, men i Vue.js så kan man skapa “variabler” i ett objekt som sparas under data-nyckeln:
+
+<script>
+  Vue.createApp({
+    data: function () {
+      return { message: 'Hello World!' }
+    }
+  }).mount('#app')
+</script>
+
+Vue.js-“variabler” kan skapas med nyckeln data och ett objekt
+message är här ett påhittat ord, som bara används som ett exempel.
+
+När vi har en “variabel” i ett data-objekt, likt message ovan, så kan vi komma åt detta värde via textinterpolering:
+
+<div id="app">
+  {{ message }}
+</div>
+
+Nyttjande av “variabeln”
+Ovanstående kod producerar följande HTML-kod:
+
+<div id="app">
+  Hello World!
+</div>
