added more vue info

--- a/3_Vanilla_JS/02_Fundamentals/001 MD files/VUE3 md/4.v-on.md
+++ b/3_Vanilla_JS/02_Fundamentals/001 MD files/VUE3 md/4.v-on.md
@@ -8,6 +8,8 @@ Syntaxen för att använda "v-on" är:
 v-on:event="method"
 ```
 
+ELLER:
+
 ```js
 @event="method"
 ```
@@ -37,5 +39,18 @@ Du kan också använda @ som ett shorthand för v-on. Ovanstående exempel kunde
 <template>
   <button @click="counter += 1">{{ counter }}</button>
 </template>
-Det är viktigt att notera att om du använder ett uttryck i din v-on, så måste detta uttrycket vara en kort och smidig kod och ska inte ha någon side effect.
 ````
+
+Det är viktigt att notera att om du använder ett uttryck i din v-on, så måste detta uttrycket vara en kort och smidig kod och ska inte ha någon side effect.
+
+## Fördelar med v-on:
+
+- Det är enkelt att använda och låter dig skapa interaktioner och hantera händelser i din komponent.
+- Det är möjligt att binda flera händelser till samma element.
+
+## Nackdelar med v-on:
+
+- Det kan bli svårt att hålla koll på alla händelser och metoder som är kopplade till varje element om det finns många interaktioner i en komponent.
+- Det kan leda till spagetti-kod och öka komplexiteten i din komponent om du inte håller koll på hur händelser och metoder är kopplade till varandra.
+
+Det är viktigt att hålla koll på hur händelser och metoder är kopplade till varandra och att organisera din kod för att hålla den lättläst och underhållbar. Även v-on är ett mycket användbart direktiv, det är viktigt att använda det med måtta för att undvika onödig komplexitet i din komponent.
