--- a/3_Vanilla_JS/02_Fundamentals/001 MD files/VUE3 md/6.v-show.md
+++ b/3_Vanilla_JS/02_Fundamentals/001 MD files/VUE3 md/6.v-show.md
@@ -1,4 +1,4 @@
-# v-for
+# v-show
 
 "v-show" är ett direktiv i Vue.js som används för att visa eller dölja element baserat på värdet av ett uttryck. Det fungerar på samma sätt som "v-if" direktivet, men det döljer elementet genom att sätta "display: none" i stället för att ta bort det från DOM-trädet.
 
