made changes to computed props

--- a/001 MD files/VUE3 md/9.computed_properties.md
+++ b/001 MD files/VUE3 md/9.computed_properties.md
@@ -2,6 +2,8 @@
 
 Det är en funktion i Vue 3 som tillåter utvecklare att definiera egenskaper som beräknas baserat på andra egenskaper i komponenten. De är som vanliga egenskaper, men deras värde beräknas dynamiskt varje gång någon av de egenskaper som de är beroende av ändras. Detta gör att man kan undvika att skapa onödiga beräkningar och hålla koden mer lättläst och effektiv.
 
+Computed properties i Vue 3 är funktioner som beräknar och returnerar en värde baserat på andra värden i komponenten. De används för att beräkna värden som är beroende av andra värden i komponenten, så att man slipper skriva om samma kod flera gånger. Computed properties är observerade av Vue och uppdateras automatiskt när värdena som de är beroende av ändras.
+
 Ett exempel på en computed property kan vara en egenskap som beräknar det totala priset för en varukorg i en e-handelsapplikation.
 
 <script>
@@ -32,3 +34,21 @@ computed: {
 I detta exempel är computed propertyn "firstLetter" beroende av en egenskap som heter "name". I computed property funktionen returnerar vi första bokstaven i namnet.
 
 Det är viktigt att notera att computed propertyn kommer att beräknas varje gång en av de beroende egenskaperna ändras och det här gör det mer effektivt än att skapa en vanlig metod som räknar ut värdet varje gång det behövs.
+
+## fördelar
+
+- De gör koden mer lättläst och förståelig eftersom beräkningar görs på ett centralt ställe i komponenten.
+
+- De är effektiva eftersom Vue bara beräknar och uppdaterar värdet när det behövs, och inte vid varje ändring av relaterade värden.
+
+- De är lätta att testa eftersom de är vanliga javascript-funktioner.
+
+- De kan användas för att generera värden som ska visas i vyn.
+
+## nackdelar
+
+- De kan göra koden mer komplex om man har många beräkningar som är beroende av varandra.
+
+- De kan göra koden mer svår att förstå om de är för komplexa eller om det är svårt att förstå vilka värden som påverkar dem.
+
+- De kan göra det svårt att förstå vad som händer under tiden om de är för komplexa eller om det är svårt att förstå vilka värden som påverkar dem.
